      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-install-conda-package.html
    . New tutorial: Using Statistical Process Control to monitor your signal
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-spc.html
    . New tutorial: Installing ViSP Python bindings
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-install-python-bindings.html
    . New tutorial: Color segmentation using HSV color scale
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-hsv-segmentation.html
    . New tutorial: HSV low/high range tuner tool
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-hsv-range-tuner.html
  - Bug fixed
    . [#1251] Bug in vpDisplay::displayFrame()
    . [#1270] Build issue around std::clamp and optional header which are not found with cxx17
      standard enabled
    . [#1272] Unable to build ViSP with PCL/VTK build from source, VTK headers are not found by ViSP
    . [#1273] Build error in visp_java without deprecated functionalities
    . [#1274] Build issue no member named clamp in namespace std
    . [#1279] Issue in vpPoseVector json serialization
    . [#1296] Unable to parse camera parameters with vpXmlParserCamera::parse() when camera name is empty
    . [#1307] Cannot set cxx standard when configuring for Visual Studio
    . [#1320] Broken links in the documentation
    . [#1341] SVD computation fails with Lapack when m < n
----------------------------------------------
ViSP 3.6.0 (released September 22, 2023)
  - Contributors:
    . Fabien Spindler, Souriya Trinh, Romain Lagneau, Antonio Marino, Samuel Felton,
      Francois Chaumette, Olivier Roussel, Julien Dufour, Joudy Nader
  - New classes
    . vpMocapVicon an interface over Vicon motion capture system
    . vpMocapQualisys an interface over Qualisys motion capture system
    . vpPclViewer that enables real time plotting of 3D point clouds based on PCL library
    . vpRobotUniversalRobots that allows to control an Universal Robots robot