@@ -138,7 +138,30 @@
     "xtr1common": "cpp",
     "xtree": "cpp",
     "xutility": "cpp",
-    "execution": "cpp"
+    "execution": "cpp",
+    "bufferobject": "cpp",
+    "image": "cpp",
+    "texture": "cpp",
+    "vertexarraystate": "cpp",
+    "buffered_value": "cpp",
+    "fast_back_stack": "cpp",
+    "graphicscontext": "cpp",
+    "program": "cpp",
+    "shader": "cpp",
+    "shape": "cpp",
+    "camera": "cpp",
+    "viewport": "cpp",
+    "types": "cpp",
+    "callback": "cpp",
+    "graphicsthread": "cpp",
+    "operationthread": "cpp",
+    "stateset": "cpp",
+    "export": "cpp",
+    "observer_ptr": "cpp",
+    "primitiveset": "cpp",
+    "stateattribute": "cpp",
+    "uniform": "cpp",
+    "polytope": "cpp"
   },
   "C_Cpp.vcFormat.indent.namespaceContents": false,
   "editor.formatOnSave": true,
